--- a/components/ChatBox.module.css
+++ b/components/ChatBox.module.css
@@ -2,9 +2,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  position: relative;
-  flex: 1;
-  overflow: hidden;
 }
 
 .chatText {
@@ -39,11 +36,7 @@
   grid-template-columns: 1fr 70px;
   border-top: 1px solid #333;
   background-color: #252525;
-  position: relative;
-  z-index: 100;
   height: 60px;
-  min-height: 60px;
-  flex-shrink: 0;
 }
 
 .textarea {
@@ -132,19 +125,14 @@
 @media (max-width: 600px) {
   .chatHolder {
     height: 100%;
-    display: flex;
-    flex-direction: column;
   }
   
   .chatText {
     padding: 1em;
-    flex: 1;
-    overflow-y: auto;
   }
   
   .form {
     height: 50px;
-    min-height: 50px;
   }
   
   .textarea {
